Refine questions for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             { id: 13, part: 'B', question: "Bao nhiêu lần bạn cảm thấy bồn chồn hoặc bứt rứt?", threshold: 3 },
             { id: 14, part: 'B', question: "Bao nhiêu lần bạn gặp khó khăn trong việc giữ yên lặng khi muốn nghỉ ngơi hoặc thư giãn?", threshold: 3 },
             { id: 15, part: 'B', question: "Bao nhiêu lần bạn cảm thấy mình nói quá nhiều khi tham gia vào các giao tiếp xã hội?", threshold: 3 },
-            { id: 16, part: 'B', question: "Khi đang nói chuyện, bao nhiêu lần bạn nói chêm vào hoặc tự kết thúc câu nói của người khác trước khi họ kịp làm điều đó?", threshold: 3 },
+            { id: 16, part: 'B', question: "Khi đang nói chuyện, bao nhiêu lần bạn nói chen vào trước khi người khác kết thúc ý của họ, hoặc tự đưa ra câu trả lời trước khi người khác kịp hỏi xong?", threshold: 3 },
             { id: 17, part: 'B', question: "Bao nhiêu lần bạn gặp khó khăn trong việc chờ đến lượt mình trong các tình huống đòi hỏi sự chờ đợi?", threshold: 3 },
-            { id: 18, part: 'B', question: "Bao nhiêu lần bạn ngắt lời người khác khi họ đang bận rộn?", threshold: 3 }
+            { id: 18, part: 'B', question: "Bao nhiêu lần bạn xen vào khi người khác đang làm việc của họ?", threshold: 3 }
         ];
 
         const OPTIONS = [
