--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         </button>
                         
                         <p className="text-xs text-center text-slate-400 mt-4">
-                        © WHO & Workgroup on Adult ADHD. Phiên bản tiếng Việt dùng cho mục đích tham khảo.
+                        © WHO & Workgroup on Adult ADHD. Phiên bản tiếng Việt được phát triển bởi Vinmec IMHC.
                         </p>
                     </div>
                     </div>
